added to project necessary directories

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>News api</title>
-</head>
-<body>
-    <div>
-        <h1>Page for newsapi</h1>
-    </div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="shortcut icon" href="app/assets/images/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="app/assets/images/favicon.ico" type="image/x-icon">
+        <title>News api</title>
+    </head>
+    <body>
+    </body>
 </html>
