--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             const config = {
                 newsUrl: 'https://newsapi.org/v1/articles?source=bbc-news&apiKey=e4f61131ae2a4c888846c71d56ebb5c0',
                 newsElementId: 'articles',
-                isDebugMode: true
-            }
+                isDebugMode: false
+            };
             const app = new NewsApplication(config);
             app.run();
         }
